examples/test/testpolicy15650.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15650
  namespace: namespace281
spec:
  podSelector:
    matchLabels:
      key35: value23
      key12: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value43
      podSelector:
        matchLabels:
          key28: value29
          key36: value41
